--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ pandas==2.0.3
 pandocfilters==1.5.0
 parso==0.8.3
 pathy==0.10.2
+pattern3==3.0.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
