--- a/requirements.txt
+++ b/requirements.txt
@@ -222,7 +222,7 @@ smart-open==6.3.0
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.1
-spacy==3.6.0
+spacy
 spacy-alignments==0.9.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
