--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,28 @@
 altair==5.0.1
-
 gTTS==2.3.2
 gTTS-token==1.1.4
 httplib2==0.20.2
 huggingface-hub==0.16.4
-
 inflect==7.0.0
 ipykernel==6.24.0
 ipython==8.14.0
-
 Jinja2==3.1.2
-
 lemminflect==0.2.3
-
 netaddr==0.8.0
 netifaces==0.11.0
 networkx==3.1
 nltk==3.8.1
-
 numpy==1.25.1
-
 pandas==2.0.3
-
-
+playsound==1.3.0
 pyinflect==0.5.1
-
 spacy==3.6.0
 spacy-alignments==0.9.0
 spacy-legacy==3.0.12
 spacy-loggers==1.0.4
 spacy-transformers==1.2.5
-
 stack-data==0.6.2
 streamlit==1.24.1
-
 tokenizers==0.13.3
 transformers==4.30.2
 
